Weather App 1.1 // Fixed error handling // Fixed sizing // Created element functions for easier readablity and functionality

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+:root {
+    --placeholder-color: rgba(0,0,0, 0.6);
+}
+
 html {
     box-sizing: border-box;
     height: 100%;
@@ -12,11 +16,13 @@ html {
 }
 
 body {
-    background:linear-gradient(rgb(109, 191, 226), rgb(108, 193, 226),rgb(33, 62, 73));
+    height: 100%;
+    background: linear-gradient(rgb(109, 191, 226), rgb(108, 193, 226),rgb(33, 62, 73));
 }
 
 #loading-circle-wrapper{
-    display: none;
+    position: absolute;
+    display: flex;
     height: 100%;
     width: 100%;
     justify-content: center;
@@ -37,6 +43,7 @@ body {
 }  
 
 #title-wrapper {
+    position: relative;
     margin: -20px auto;
     display: flex;
     height: 500px;
@@ -51,6 +58,8 @@ body {
     color: #2a6dff;
 }
 
+
+
 #clouds {
     bottom: -85px;
     position: fixed;
@@ -58,8 +67,11 @@ body {
     width: 100%;
     background: url('./images/cloud.svg');
     background-size: cover;
+    z-index: 1;
 }
+
 .search-form-wrapper {
+    display: block;
     height: 60px;
     position: relative;
 }
@@ -68,7 +80,7 @@ body {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
-    margin-top: 20px;
+    margin-top: 10px;
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
     background-color: rgba(255, 255, 255, 0.5);
@@ -82,7 +94,7 @@ body {
 }
 
 #location-search::placeholder {
-    color: rgba(0,0,0,0.7);
+    color: var(--placeholder-color);
 }
 
 #location-search:focus::placeholder {
@@ -101,7 +113,7 @@ body {
     position: absolute;
     left: calc(50% + 130px);
     transform: translateX(-50%);
-    margin-top: 24px;
+    margin-top: 14px;
     background-color: rgba(255, 255, 255, 0);
     background-image: url('./images/search-icon.png');
     height: 20px;
@@ -115,16 +127,33 @@ body {
     cursor: pointer;
 }
 
+.bodyWrap {
+    position: relative;
+    display: block;
+    margin: 0 auto;
+    background: rgba(255,255,255, 0.1);
+    backdrop-filter: blur(4px);
+    width: 600px;
+    border-radius: 30px;
+    padding-bottom: 5px;
+    z-index: 2;
+    height: calc(100% - 60px);
+}
 
+#locationWrap {
+    width: 100%;
+    text-align: center
+}
 
 .location {
-    width: 100%;
+    margin-bottom: 10px;
+    display: inline-block;
     text-align: center;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding: 10px;
+    border-radius: 100px;
     font-size: 2em;
     color: white;
-    font-family: 'Amatic SC', cursive;
+    font-family: 'Edu NSW ACT Foundation', cursive;
 }
 
 .art-wrapper {
@@ -153,8 +182,7 @@ body {
 
 .weather-type-wrapper {
     text-align: center;
-    padding: 20px;
-    padding-bottom: 40px;
+    padding: 10px;
 }
 
 #weatherType {
@@ -166,35 +194,35 @@ body {
 
 #hr {
     color: white;
-    background-color: white;
-    width: 600px;
     margin: 0 auto;
     height: 3px;
 }
 
 .info-wrapper {
-    margin-top: 30px;
+    width: 100%;
+    margin-bottom: 10px;
 }
 
 .info-table {
     margin: 0 auto;
+    background-color: rgb(255, 255, 255);
+    border-radius: 15px;
+    width: 272px;
+    height: 300px;
 }
 
 td {
     width: 90px;
     height: 50px;
-    color: white;
+    color: rgb(98, 98, 98);
     font-family: 'Barlow Semi Condensed', sans-serif;
     font-size:20px;
 }
 
 .query {
     font-weight: 600;
-    font-style: italic;
-}
-
-.spacer {
-    width: 80px;
+    padding-left: 30px;
+    width: 150px;
 }
 
 .data {
